Fixed misaligment in 401 response across endpoints found through kiota. Created 401 conventions applied to all controllers. Changed enum json serializer to convert to string value. Added validation of shadow details in open api spec and integration tests.
